--- a/haproxy.conf
+++ b/haproxy.conf
@@ -55,5 +55,5 @@ backend bk_db
 		balance roundrobin
         option httpchk
         mode tcp
-        server pgbouncer-1 10.20.30.71:6432 maxconn 2500 check port 6432
-        server pgbouncer-2 10.20.30.72:6432 maxconn 2500 check port 6432
+        server pgbouncer-1 10.20.30.71:6432 maxconn 2500 check
+        server pgbouncer-2 10.20.30.72:6432 maxconn 2500 check
